--- a/results_accessory_v3.Rmd
+++ b/results_accessory_v3.Rmd
@@ -1,4 +1,4 @@
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,results='hide', message=FALSE,warning=FALSE}
 library(remake)
 create_bindings()
 
@@ -12,34 +12,35 @@ source("scripts/functions.R")
 * Reproductive investment can be considered on an energy or "count" (fecundity) basis
 
     1. What reproduction "pool" should one measure?
-      * Is fecundity good enough?
-      * Is fruit or propagule weight good enough?
+        * Is fecundity good enough?
+        * Is fruit or propagule weight good enough?
     2. What might cause shifts in accessory costs across species?
-      * Previous studies have shown smaller-seeded species have lower accessory costs.
+        * Previous studies have shown smaller-seeded species have lower accessory costs.
     3. How does alotment to different accessory tissue types shift within a species as it ages, grows, or increases RA? 
-      * If accessory costs decrease with increased RA, increasing RA yields compounding returns. 
+        * If accessory costs decrease with increased RA, increasing RA yields compounding returns. 
 
 ##Summary of outcomes
-1. Total reproductive investment is by far the best correlate with total plant size (or growth investment)
+1. Total reproductive investment is the best correlate with total plant size (or growth investment)
 2. Plants with smaller seeds, smaller adult sizes, and higher seedset have lower accessory costs. It is mathematically plausable that the concept of "accessory costs" is not all that different from "seed set"
-  * In other words, plants with higher seed set, have lower accessory costs due to calculations
-  * It is nice to have a data set that shows, across 14 species, that larger plants have lower seed set.
+    * In other words, plants with higher seed set, have lower accessory costs due to calculations
+    * Across  the 14 species, plants with larger adult size have lower seed set.
 3. Bigger plants have higher RA. 
-  * Plants that produce more buds, invest more absolute energy into either pre-pollination tissues or propagules also have higher RA.
-  * As plants get bigger, there is a slight shift of energy from pre-pollination tissues to propagules, but this is a small effect 
-  *(i.e. accessory costs decline slightly with increasing plant size)
+    * Plants that produce more buds, invest more absolute energy into either pre-pollination tissues or propagules also have higher RA.
+    * As plants get bigger, there is a slight shift of energy from pre-pollination tissues to propagules, but this is a small effect 
+    *(i.e. accessory costs decline slightly with increasing plant size)
 4. Among reproducing individuals, bigger or older plants DO NOT have higher seedset, although more individuals become reproductively mature over time. 
-  * Proportional pre-pollination costs also decrease with plant age in most species
+    * Proportional pre-pollination costs also decrease with plant age in most species
 5. Species differ enormously in their relative investment in different reproductive tissue types
 
 ###Still thinking about
 1. Most analyses look at propagules and pre-pollination tissues, but allocation can be further divided - it would be interesting to look at proportion energy to aborted buds vs. flowers (I do know aborted buds decrease)
 
 
-##Which measure of reproductive output best correlates with plant size or growth (growth plotted here)
+##Which measure of reproductive output best correlates with plant size or growth
 * Measuring total reproductive output has a much stronger correlation than investment in fruit weight or propagules
-* To demonstrate the point that most investment is in prepollination tissues, the regression of total weight against prepollination investment is as good as total reproductive investment - one could just count buds + flowers!
-* Note that each of these figures (and models) only includes individuals with non-zero investment in the reproductive pool of interest
+* The regression of total weight against prepollination investment is as good as total reproductive investment - one could just count buds + flowers!
+    * This is likely because prepollination investment is much a large proportion of total reproductive investment
+* Note that each of these figures (and models) only includes individuals with non-zero investment in the reproductive pool plotted
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
@@ -60,26 +61,45 @@ mod <- lm (log(total_weight)~log(prepollen_all_inv), data=subset(SummaryInd,prep
 plot(prepollen_all_inv~total_weight,data=subset(SummaryInd,prepollen_all_inv>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="prepollen investment (mg)", xlim=c(100,2000000))
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
+
+mtext("Total plant size (mg)",1, outer=TRUE,cex=1.2)
 ```
-
-##How do accessory costs shift with seed size?
-
-### Comparing "per successful seed" and "proportion reproductive investment" accessory cost calculations 
+    
+### Comparing accessory cost calculations expressed as "per successful seed" versus "proportion reproductive investment"  
+  - The difference between the two calculations is seed count
   - calculating accessory costs on a per seed basis stratify the data much more by species 
-  - cross-species variation is accentuated in plots calculated as "per successful seed" (vs. those with proportional accessory costs), because the species that have more seeds (lower proportional accessory costs), also have higher seedset
+      * this is because the species that have more seeds (lower proportional accessory costs), also have higher seedset
+  - Calculations per seed tell you energy input relative to fecundity
+```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
+options(scipen=10)
+par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(1.1,1,0.3,0.3)) 
+mod <- lm(log(seed_count)~species*accessory_per_seed,data=subset(SummaryInd,seed_count>0))
+plot(seed_count~accessory_per_seed,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="seed count",xlab="accessory costs per successful seed (mg)",cex=.9)
+words.bottom.left.logxy(mod)
 
-    - Larger-seeded species have higher accessory costs, as has been shown in other studies
-    - However, it is also true that "larger species" and species with lower seed set have higher accessory costs
-    - And that species with greater prepollination investment have higher accessory costs (since this is nearly the complement to propagule investment)
+plot(seed_count~asin(sqrt(prop_accessory)),SummaryInd, log="y", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="proportion of reproduction to accessory tissues (asin)",cex=.9)
+legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+```
+###Do accessory costs shift with seed size?
+    * These plots presented using both accessory cost calculations
+    
+Results:  
+    - Larger-seeded species have higher accessory costs, as has been shown in other studies  
+    - Also: "larger species" and species with lower seed set have higher accessory costs  
+    - And: species with greater prepollination investment have higher accessory costs (since this is the majority of accessory costs for most species)  
+    - When all 4 variables put into a single model, regardless of "accessory cost" calculation, seedset always by far the most significant correlate   
+        * seed size is least frequently a correlate in models, although of course highly significant when analyzed on its own  
 
-- Taken together these data (and various other plots, not shown) suggest that accessory costs (as a proportion) are most strongly driven by seedset
-- In other words, if flowers are pollinated and develop into mature seeds, the plants ends up investing more energy in reproduction and that extra energy is being invested into propagules.
-- Therefore, seed set goes up and by default, a greater proportion of energy goes into propagules and less into "accessory costs"
-  
-```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=12, fig.height=6}
-options(scipen=999)
-par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(.7,1,0.3,0.3)) 
+Interpretation:  
+    - Not sure one can separate the effect of plant size, seed set, seed size on what drive accessory costs  
+    - the reason seed set is strongly correlated, is because if flowers are pollinated and develop into mature seeds, the individual plant ends up investing more energy in reproduction and that extra energy is being invested into propagules, reducing accessory costs.   
+        * This is true at the species and individual level.  
 
+mod <- lm(log(accessory_per_seed)~(seedset)*log(prepollen_all_inv)*log(total_weight)*log(seed_size),data=subset(SummaryInd,seedset>0&prepollen_all_per_seed>0))
+summary(mod)
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
+par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(.7,1,0.3,0.3))
 #mod <- lm(log(seed_size)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
 mod <- lm(log(seed_size)~(accessory_per_seed_mean),SummarySpp)
 plot(accessory_per_seed~seed_size,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="accessory costs per successful seed",xlab="",cex=.9)
@@ -145,7 +165,7 @@ mtext("pre-pollination costs (proportional)",1, outer=TRUE,cex=1.2)
 * Bigger seeds have bigger fixed costs of making that seed (1st plot)
 * But other than LEES having much lower costs, no shifts across species in their relative costs to make a seed (2nd plot); and LEES is one of the species where I use "propagule" not a single seed, so its "seed size" is higher and "accessory costs" slightly lower, since all fruit parts are part of the propagule 
 * In other words, patterns of accessory costs vs. seed size, plant size, etc come about due to the differential effect of bud, flower abortion across species  
-```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=12, fig.height=6}
+```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
 plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp[as.factor(species)],xlab="costs to make 1 seed (mg)",cex=1.2)
 mod <- lm(seedcosts~seed_size, SummarySpp)
@@ -158,18 +178,58 @@ mod <- lm(costs_per_seed~seed_size, SummarySpp)
 words.bottom.left.logy(mod)
 ```
 
-###Seedset by age
-* Replotting the seedset data by age, showing that the correlation between seedset and accessory costs is not primarily age related
-* At most, there are most "old" plants with very low seedset 
-```{r, echo=FALSE,message=FALSE,fig.width=6, fig.height=6}
-par(mfrow=c(1,1), cex=1, omi=c(0.6,0.3,0.3,0.3), mai=c(0.8,1,0.3,0.3))  
+###Seedset,seed count by age, size, RA
+* Replotting the seedset data by age, showing that the correlation between seedset and accessory costs is not age related
+* At most, there are most "old" plants with very low seedset  
+* these plots only include individuals with some seedset, thereby ignoring most young plants
+
+```{r, echo=FALSE,message=FALSE,fig.width=7, fig.height=7}
+par(mfrow=c(1,1), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3))  
 
 mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.age[as.factor(age)],ylab="proportion reproduction to propagules (1-accessory)",xlab="")
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.age[as.factor(age)],ylab="proportion RE to propagules (1-accessory)",xlab="seed set")
 words.bottom.right.logxy(mod)
 legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
-mtext("Seed set",1, outer=TRUE,cex=1.1)
 ```
+
+* There is no overall shift in either seedset or proportional allocation to propagules with increasing RA  
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7,warning=FALSE}
+par(mfrow=c(1,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
+mod <- lm(asin(sqrt(seedset))~asin(sqrt(RA)),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(asin(sqrt(RA))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+words.bottom.right(mod)
+
+
+mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
+plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), log="x", pch=16,col=col.spp[as.factor(species)])
+words.bottom.right.logx(mod)
+legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+```
+
+* Furthermore, looking within species  
+    - Not a single species shows an increase in prop_propagule with increasing RA  
+    - And for seedset vs RA, only HATE shows an increase, and HEPU a decrease  
+    - So no, there are no compounding benefits to increasing RA     
+    
+```{r, echo=FALSE,message=FALSE,fig.width=7, fig.height=7,warning=FALSE}
+yvar <- "RA_asin"
+xvar <- "seedset"
+
+data <- subset(SummaryInd,seedset>0)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(x[[yvar]] ~  asin(sqrt(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+
+results
+```
+
+* And there are absolutely no patterns of interest relative to seed count   
+    * it doesn't even correlate very well with RA or plant size
 
 ###Relationship between tissue allocation and reproductive investment
 * these data also tell the story of seedset being an important "component" and being lower in bigger species
@@ -182,8 +242,13 @@ mod <- lm(log(ReproInv)~(prop_prepollen_all),data=subset(SummaryInd,prop_prepoll
 plot((prop_prepollen_all)~ReproInv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
 words.top.right.logx(mod)
 legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
- 
-mod <- lm(log(ReproInv)~log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
+
+options(scipen=5)
+mod <- aov(log(ReproInv)~species*log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
+summary(mod)
+
+options(scipen=20)
+mod <- lm(log(ReproInv)~species*log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
 plot(prop_propagule~ReproInv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Propagules (as proportion repro inv)")
 words.top.right.logxy(mod)
 mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
@@ -209,25 +274,24 @@ words.bottom.right.logxy(mod)
 
 * RA is also correlated with count of floral units - the total number of buds produced (i.e. final development stage can be buds, flowers, aborted fruit or fruit)
 * This is true for many individual species as well as across species
-* RA and seed count are also correlated, but mainly that no low RA individuals have high seed counts
+
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
 mod <- lm(log(RA)~log(repro_all_count),data=subset(SummaryInd,repro_all_count>0))
 plot(repro_all_count~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of buds produced",xlab="")
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
-
-mod <- lm(log(RA)~log(seed_count+.1),data=subset(SummaryInd,repro_all_count>0))
-plot((.1+seed_count)~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of seeds produced",xlab="")
-words.bottom.right.logxy(mod)
 mtext("RA",1, outer=TRUE,cex=1.1)
+```
 
+```{r, echo=FALSE,message=FALSE,fig.width=28, fig.height=28}
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "repro_all_count"
-xvar <- "RA"
+xvar <- "RA_asin"
 
 data <- subset(SummaryInd, repro_all_count>0)
 data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm((log(x[[yvar]])) ~  log(x[[xvar]])))
+lmfits <- lapply(data, function(x) lm((log(x[[yvar]])) ~  (x[[xvar]])))
 results <- summarise_all_fits(lmfits)
 
 results$r.squared <- round(results$r.squared,digits=3)
@@ -236,20 +300,24 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",
+                    main=spp)
+    }
 ```
 
 ###What causes the correlation between RA and plant size (or total reproductive investment)?
 * Do plants invest equally more in all reproductive tissues as they get bigger or do they increase allocation to certain types of reproductive tissues more than others?
 
-* If they shifted their proportional investment, there would be a relationship between RA and the proportional investment in 1 (or more) of the 5 reproductive energy pools. If they do not shift their proportional investment, all 5 would have no relationship.
-    ** Only "proportional energy to pre-pollination aborted tissues" shows a significant decline with increasing RA - and it has a very convincing decline. Since no other pool shows an increase in proportional investment, that extra energy must be distributed fairly randomly across other pools
+* If they shifted their proportional investment, there would be a relationship between RA and the proportional investment in 1 (or more) of the 5 reproductive energy pools. If they do not shift their proportional investment, all 5 would have no relationship.  
+      * Only "proportional energy to pre-pollination aborted tissues" shows a significant decline with increasing RA - and it has a very convincing decline.   
+      * Since no other pool shows an increase in proportional investment, that extra energy must be distributed fairly randomly across other pools
 
-* Simultaneously, all tissue pools should show a positive relationship between actual investment amounts (mg) and RA
-  ** Indeed, all pools increase with increasing RA, although only "pre-pollination successful tissues" and "energy to propagules" have a convincing r-squared value (across all species)
+* Simultaneously, all tissue pools should show a positive relationship between actual investment amounts (mg) and RA  
+      * However, only "pre-pollination successful tissues" and "energy to propagules" have a convincing r-squared value (across all species)  
 
-* 
 * It might be interesting to look at this pattern by species
-
 
 ```{r, echo=FALSE,message=FALSE,fig.width=12, fig.height=30}
 par(mfrow=c(5,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
@@ -326,12 +394,16 @@ plot((prop_propagule)~(RA),data=subset(SummaryInd,RA>0&prop_propagule>0), log="x
 words.bottom.left.logxy(mod)
 ```
 
-###Shifts across age
+###Shifts across age and height
 * Seedset shows a slight decrease with proportional plant height (the best proxy for "relative size")  
-* this pattern likely exists because species that begin reproducing at shorter proportional heights have higher seedset  
-* only LEES shows a significant decline with age, although most species have a segative slope  
-* there is a similar pattern for Propagule investment (not shown)  
-* Table shows results, by species, for seedset by proportional height  
+    * this pattern likely exists because species that begin reproducing at shorter proportional heights have higher seedset  
+    * only LEES shows a significant decline
+
+* the same analysis can be done on seedset by age, with similar response    
+    * Only HEPU, LEES show significant decline
+    
+yvar <- "seedset"
+xvar <- "prop_maxH""
 ```{r, echo=FALSE,message=FALSE}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset<1&seedset>0))
@@ -355,49 +427,19 @@ results$b <- round(results$b,digits=2)
 results
 ```
 
-* Results, by species, for seedset by age  
-* Only HEPU, LEES show significant decline, but again mostly negative slopes
+yvar <- "prop_propagule"
+xvar <- "total_weight"
+
+* Only EPMI shows a decline in prop propagule with increasing plant weight  
+* No species show an increase in prop propagule with increasing plant weight  
+* Of course the proportion of species with prop propagule > 0 increases with plant size
+
 ```{r, echo=FALSE,message=FALSE}
-yvar <- "seedset"
-xvar <- "age"
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+yvar <- "prop_propagule"
+xvar <- "total_weight"
 
-data <- subset(SummaryInd, seedset>0&seedset<1)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  log(x[[xvar]])))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-
-results
-```
-
-* A number of species show declines in accessory costs with age, but this effect disappears once you include only individuals that set *any* seed
-```{r, echo=FALSE,message=FALSE}
-yvar <- "prop_accessory"
-xvar <- "age"
-
-data <- subset(SummaryInd)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  log(x[[xvar]])))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-
-results
-```
-
-* 8 of the 14 species show declines in allocation to pre-pollination tissues with increasing age
-```{r, echo=FALSE,message=FALSE}
-yvar <- "prop_prepollen_all"
-xvar <- "age"
-
-data <- subset(SummaryInd)
+data <- subset(SummaryInd,prop_propagule>0)
 data <- split(data, data$species)
 lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  log(x[[xvar]])))
 results <- summarise_all_fits(lmfits)
@@ -548,10 +590,6 @@ words.bottom.left(mod)
 
 #Shifts in accessory costs across species and ages
 ##Overall results
-- Accessory costs higher for bigger seeds  
-  
-- Accessory costs higher for bigger species; these are the same species that invest less in RA  
-  
 - Of course there is also a correlation between seed size and plant size, but actually not as strong as the accessory cost one, presumably because older plants have lower accessory costs as well as species that are inherently bigger  
   
 - A number of species show fairly consistent declines in accessory costs with various measures of "bigger", including size, age, RA. Other species show no patterns  
